--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 
 <head>
+ <!--<base href=".">-->
   <base href=".">
-  <!-- <base href="/">-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Design System for Bootstrap 4.">
@@ -16,8 +16,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">-->
   <!-- Icons -->
  
-  <link href="./../assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-  <link href="./../assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="./assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="./assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <!-- adeed -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
